# web-scraper

./: .gitignore  README.md  pyproject.toml
src/: buying_group_new_deal_monitor.py  website_oos_scraper.py
tests/: test_scraper.py
